// protoc -I libre/ libre/libre.proto --go_out=plugins=grpc:libre

syntax = "proto3";

package libre;

service Libre {
  rpc FetchBooks (Empty) returns (FetchBooksReply) {}
  rpc SaveBook (SaveBookRequest) returns (SaveBookReply) {}
  rpc Search (SearchRequest) returns (SearchReply) {}
  rpc DeleteBook (DeleteBookRequest) returns (Empty) {}
}

message Empty {}



message SearchRequest {
    string keyword = 1;
}

message SearchReply {
    repeated Book books = 1;
}

message DeleteBookRequest {
    Book book = 1;
}

message SaveBookReply {
    Book book = 1;
}

message SaveBookRequest {
    Book book = 1;
}

message FetchBooksReply {
  repeated Book books = 1;
}

message Book {
    int64 id = 1;
    string title = 2;
    string sub_title = 3;
    string published_date = 4;
    string description = 5;
    repeated string authors = 6;
    repeated Identifier industry_identifiers = 7;
    ImageLink image_links = 8;
}

message Identifier {
    string type = 1;
    string identifier = 2;
}

message ImageLink {
    string small_thumbnail = 1;
    string thumbnail = 2;
}
